package org.example.sem_backend.modules.notification_module.domain.enums;

public enum NotificationType {
    EMAIL,
    PUSH,
    IN_APP
}
