@startuml
!define SpringComponent stereotype

' Interface NotificationChannel
interface NotificationChannel {
    +send(Notification notification)
}

' Enum NotificationType
enum NotificationType {
    EMAIL
    PUSH
    IN_APP
}

' Class NotificationRequest
class NotificationRequest {
    -String message
    +getMessage() : String
    +setMessage(String)
}

' Class Notification
class Notification {
    -Long id
    -Set<Long> recipient
    -String message
    -NotificationType type
    -LocalDateTime createdAt
    -LocalDateTime readAt
    +getId() : Long
    +setId(Long)
    +getRecipient() : HashSet<Long>
    +setRecipient(Set<Long>)
    +getSubject() : String
    +setSubject(String)
    +getMessage() : String
    +setMessage(String)
    +getType() : NotificationType
    +setType(NotificationType)
    +getCreatedAt() : LocalDateTime
    +setCreatedAt(LocalDateTime)
    +getReadAt() : LocalDateTime
    +setReadAt(LocalDateTime)
}

class SseEmitterService {
    +sendNotification(String)
    +addEmitter(SseEmitter emitter, Long userId)
    +removeEmitter(SseEmitter emitter, Long userId)
}

' Classes implementing NotificationChannel
'@Service
class EmailNotificationChannel implements NotificationChannel {
    -JavaMailSender mailSender
    +send(Notification)
}

'@Service
class PushNotificationChannel implements NotificationChannel {
    -PushService pushService
    +send(Notification)
}

'@Service
class InAppNotificationChannel implements NotificationChannel {
    -NotificationRepository notificationRepository
    +send(Notification)
}

InAppNotificationChannel *-- SseEmitterService : has

class NotificationService {
    -List<NotificationChannel> channels
    +sendNotification(NotificationRequest)
}

class KafkaProducer {
   -KafkaTemplate<String, String> kafkaTemplate
   +send(String topic, String message)
}

class NotificationListener {
    -NotificationService notificationService
    +onHandleInternalEvent(ApplicationEvent event)
    +onHandleKafkaEvent(ConsumerRecord<String, String> record)
}

class UserPreferences {
    -String userId
    -boolean emailNotifications
    -boolean pushNotifications
    -boolean inAppNotifications
    +getUserId() : String
    +setUserId(String)
    +isEmailNotifications() : boolean
    +setEmailNotifications(boolean)
    +isPushNotifications() : boolean
    +setPushNotifications(boolean)
    +isInAppNotifications() : boolean
    +setInAppNotifications(boolean)
}

' NotificationRepository
'@Repository
interface NotificationRepository {
    +save(Notification) : Notification
}

' NotificationController
'@RestController
class NotificationController {
    -NotificationService notificationService
    +sendNotification(NotificationRequest) : ResponseEntity<String>
}

' Relationships
NotificationController "1" --> "1" NotificationService : uses
NotificationListener "1" --> "1" NotificationService : uses
NotificationService "1" --> "*" NotificationChannel : uses
KafkaProducer "1" *-- "1" NotificationService : composition
NotificationService --> NotificationRepository : uses
@enduml
